# geaflow

./: .gitattributes  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  MAGNITUDE_AND_TRAVERSAL_VECTOR_EXPLANATION.md  MAGNITUDE_AND_TRAVERSAL_VECTOR_EXPLANATION_EN.md  Makefile  NOTICE  README.md  README_cn.md  build.sh  codecov.yml  geaflow_lbs_integration_solution.md  pom.xml  sagnn_model_hot_reload_strategy.md  sagnn_model_weight_update_solution.md  setup_python_env.sh  xiamen_escort_dispatch_implementation_plan.md
.github/workflows/: ci-jdk11.yml  ci-py311.yml  ci.yml  utils.sh
geaflow/: pom.xml
geaflow-ai/: pom.xml
geaflow-ai/agent/: main.py  pyproject.toml
geaflow-ai/plugins/lightmem/: .gitignore  README.md  pyproject.toml
geaflow-ai/plugins/lightmem/api/: __init__.py  app.py  envelope.py
geaflow-ai/plugins/lightmem/core/: __init__.py  ledger.py  memory_kernel.py  py.typed  types.py  views.py
geaflow-ai/plugins/lightmem/core/geaflow_ai_lightmem.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
geaflow-ai/plugins/lightmem/scripts/: smoke.sh
geaflow-ai/plugins/lightmem/tests/: test_api.py  test_license_headers.py  test_write_recall_provenance.py
geaflow-console/: pom.xml
geaflow-console/geaflow-web/: package.json  pnpm-lock.yaml
geaflow-mcp/: pom.xml
geaflow-reasoning/: .gitignore  CODE_STYLES.md  architecture.md  pyproject.toml  数学建模.md
geaflow-reasoning/casts/core/: config.py  gremlin_state.py  interfaces.py  models.py  schema.py  services.py
geaflow-reasoning/casts/data/: graph_generator.py  sources.py
geaflow-reasoning/casts/services/: embedding.py  llm_oracle.py  path_judge.py
geaflow-reasoning/casts/simulation/: engine.py  evaluator.py  executor.py  metrics.py  runner.py  visualizer.py
geaflow-reasoning/casts/utils/: helpers.py
geaflow-reasoning/docs/: API_zh.md  EVALUATOR.md
geaflow-reasoning/tests/: test_execution_lifecycle.py  test_gremlin_step_state_machine.py  test_lifecycle_integration.py  test_metrics_collector.py  test_signature_abstraction.py  test_simple_path.py  test_starting_node_selection.py  test_threshold_calculation.py
geaflow/geaflow-analytics-service/: pom.xml
geaflow/geaflow-collection/: pom.xml
geaflow/geaflow-common/: pom.xml
geaflow/geaflow-context-memory/: pom.xml
geaflow/geaflow-core/: pom.xml
geaflow/geaflow-dashboard/: pom.xml
geaflow/geaflow-deploy/: pom.xml
geaflow/geaflow-dsl/: pom.xml
geaflow/geaflow-examples/: pom.xml
geaflow/geaflow-infer/: pom.xml
geaflow/geaflow-memory/: pom.xml
geaflow/geaflow-metrics/: pom.xml
geaflow/geaflow-model/: pom.xml
geaflow/geaflow-plugins/: pom.xml
geaflow/geaflow-state/: pom.xml
geaflow/geaflow-utils/: pom.xml
tools/: checkstyle.xml
笔记/: 类继承关系.drawio
(+964 files in other folders)
