[project]
name = "CASTS"
version = "0.1.0"
description = "CASTS: ..."
authors = [
    {name = "Kuda", email = "appointat@gmail.com"}
]
requires-python = ">=3.10,<3.12"
dependencies = [
    "openai>=1.86.0",
    "numpy>=2.0.0",
    "matplotlib>=3.8.0",
    "networkx>=3.2.0",
    "python-dotenv>=0.21.0",
    "pytest>=8.4.0",
    "mypy>=1.19.1",
    "types-networkx>=3.6.1.20251220",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.0",
    "ruff>=0.11.13",
    "mypy>=1.18.1",
]
service = [
    "flask==3.1.1",
    "flask-sqlalchemy==3.1.1",
    "flask-cors==6.0.1",
]
test = [
    "pytest==8.4.0",
    "pytest-cov==6.2.1",
    "pytest-mock>=3.14.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[[tool.uv.index]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"
default = false

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle error
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
    "EXE",
]
ignore = [
    "UP006",    # use List not list
    "UP035",
    "UP007",
    "UP045",
]

[tool.ruff.lint.isort]
combine-as-imports = true
force-sort-within-sections = true
known-first-party = ["app"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
testpaths = ["test"]
python_files = ["test_*.py"]
addopts = "-v"
asyncio_mode = "auto"  # Enable asyncio mode
markers = [
    "asyncio: mark test as async"
]
